<resources>
    <string name="app_name">RESEAU ?</string>
    <string name="version">RESEAU ? v1.1 GAMMA </string>
    <string name="bonus">Félicitations vous avez trouvé le bouton secret. \nNous sommes fiers de vous. \nEt maintenant? \nAllez vite parler de cet exploit à tous vos amis! \nToute l\'équipe de développement de IPIC&amp;cie vous souhaite une agréable journée.</string>
    <string name="bienvenue">Bienvenue sur RESEAU ?</string>
    <string name="presentation">Developpée en France et régulièrement mise à jour, RESEAU ? est une application permettant de localiser des antennes relais, que vous soyez en Métropole ou dans les DROM. \nVous pourrez ainsi améliorer votre débit, grâce à l\'aide cet outil, qui vous guidera, vous renseignera sur le type de panneaux disponible (2G, 3G, 4G ou 5G) et bien plus encore. \nConçue pour vous aider, et non pour vous surveiller, IPIC&amp;cie garantit ne récolter AUCUNE donnée, sans votre accord explicite, dans le cadre de la procédure de résolution de problèmes (si toutefois vous veniez à en rencontrer…). N\'hésitez pas à consulter notre politique de confidentialité. \nL\'application RESEAU ? est entièrement gratuite et sans publicités. Pour toute question/suggestion/commentaire, nous restons à votre écoute à l\'adresse: ipic.assistance@protonmail.com</string>
    <string name="onyva">Vous possédez désormais un incoroyable outil, pourquoi encore attendre avant de vous en servir? \nAllez vite découvrir ce dont il est capable!</string>
    <string name="plusvoir">Ne plus montrer ce message</string>
    <string name="PC">Politique de confidentialité</string>
    <string name="cestparti">C\'est parti !</string>
    <string name="aide">Aide</string>
    <string name="vers_version">Notes de version</string>
    <string name="contact">Nous contacter</string>
    <string name="etat">Chargement</string>
    <string name="param_btn">Paramètres</string>
    <string name="loc_auto">localisation automatique</string>
    <string name="enregistrement_auto">Sauvegarde automatique de la position (pour utilisation en hors-ligne)</string>
    <string name="dep_carte">Verrouillage automatique de la carte (facilite la navigation)</string>
    <string name="zoom_pos">Niveau de zoom sur position</string>
    <string name="zoom_ant">Niveau de zoom sur antenne</string>
    <string name="nb_ant">Rayon de recherche</string>
    <string name="defaut">Valeurs par défaut</string>
    <string name="reinitialise">Réinitialiser l\'application</string>
    <string name="centrer_sur_antenne">Centrer sur antenne</string>
    <string name="rechercher">Rechercher une antenne</string>
    <string name="ma_position">Centrer sur ma position</string>
    <string name="antennes_proximit">antennes à proximité</string>
    <string name="texte_cache">Vous ne devriez pas voir ce message</string>
    <string name="suivant">Suivant</string>
    <string name="precedent_indic">Précédent</string>
    <string name="annuler">Annuler</string>
    <string name="verrouillage_ecran">verrouillage de l\'écran</string>
    <string name="retour_defillant">retour au mode défillant</string>
    <string name="position">Position</string>
    <string name="trois_p_p">…</string>
    <string name="chargement_1">chargement de la base de données</string>
    <string name="bug_donnee"><![CDATA[impossible de charger les données, veuillez contacter le service assistance IPIC&cie]]></string>
    <string name="pret">Prêt à l\'emploi</string>
    <string name="retour_mode_defillant">Retour au mode defillant</string>
    <string name="chargement_2">Recherche en cours</string>
    <string name="types_antenne">Type antenne</string>
    <string name="chargement_0">Initialisation des fonctions principales en cours</string>
    <string name="stop_app">Arrêter l\'application</string>
    <string name="adresse">Adresse</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="valider">Valider</string>
    <string name="ou">OU</string>
    <string name="informations">informations</string>
    <string name="nous_soutenir">Nous soutenir</string>
    <string name="etat_0">Initialisation</string>
    <string name="pub">publicités</string>
    <string name="erreur_adresse"><![CDATA[service d\'adressage indisponible, contactez le service assistance IPIC&cie si le problème persiste]]></string>
    <string name="champs_vide_recherche_adresse">Vous avez laissé un peu trop de champs vides. Nous pouvons trouver des antennes partout, même à la campagne, même dans les champs, mais si ils sont vides, c\'est qu\'il n\'y a pas d\'antenne</string>
    <string name="text_loc_adresse"> Latitude: %1$f %nLongitude: %2$f %nAdresse: %3$s %n</string>
    <string name="text_loc">Latitude: %1$f %n Longitude: %2$f %n</string>
    <string name="itineraire_dispo">itinéraire disponible</string>
    <string name="itineraire_pas_dispo">itinéraire indisponible</string>
    <string name="infos_antenne">Latitude antenne: %1$f%nLongitude antenne: %2$f%n%3$s%nDistance: %4$f m</string>
    <string name="infos_antenne_snippet">Position: %1$f; %2$f distance: %3$fm, %4$s</string>
    <string name="notes_de_version"><![CDATA[AMELIORATIONS \n-Résolution de bugs mineurs\n-optimisation de l\'interface pour tous les appareils \n-informations de guidage disponible\n\nPROBLEMES CONNUS \n-Recherche par communes indisponible en Corse\n\nA VENIR \n-Boussole\n-Lien vers le site web d’IPIC&cie\n-Ajout d\'informations supplémentaires sur les antennes (azimuts et puissance)\n-sauvegarde des anciennes positions\n\n\nSPECIFICATIONS:\nchamps actuellement indisponible, en raison de l’évolution du droit européen sur la diffusion de données techniques et de la protection des innovations technologiques\n\nIPIC&cie 2022 se réserve tous les droits aux noms de Pierre COTAYA et Idrisse IBRAHIM \nUtilise les services OpenStreetMap ©2022 et OpenRouteService © 2022 ]]></string>
    <string name="test_wifi">Test WiFi</string>
    <string name="vers_la_carte">vers la carte</string>
    <string name="lancer_un_test">lancer un test</string>
    <string name="boucle">Boucle</string>
    <string name="description_logo">un super logo</string>
    <string name="cache">oeuf caché</string>
    <string name="un_impact_une_fissure">Un problème? Une question? Une suggestion? Une réclamation? Dites nous tout! \nNotre service d\'assistance est à votre écoute.</string>
    <string name="votre_message">Votre message</string>
    <string name="envoyer">Envoyer</string>
    <string name="_1_20">1-20</string>
    <string name="_15">15</string>
    <string name="_2g">2G</string>
    <string name="_3g">3G</string>
    <string name="_4g">4G</string>
    <string name="_5g">5G</string>
    <string name="_100_1000">100-1000</string>
    <string name="_100">100</string>
    <string name="loc_auto_txt">Localisation automatique</string>
    <string name="place_mark_txt">Placer un marqueur</string>
    <string name="anc_pos_txt">Anciennes positions</string>
    <string name="recherche_com_txt">rechercher par commune (hors connexion)</string>
    <string name="recherche_adr_txt">rechercher par adresse</string>
    <string name="Options_position_menu_titre">Options sur la position</string>
    <string name="loc_auto_activ">localisation automatique</string>
    <string name="place_mark_indication">appuyez longtemps sur un point de la carte</string>
    <string name="Options_points_titre">Trois p\'tits points</string>
    <string name="parametres_titre_txt">Paramètres</string>
    <string name="message_par_defaut">vive la baguette</string>
    <string name="btn_prec">Précédent</string>
    <string name="btn_itineraire_dsc">besoin d\'un itineraire?</string>
    <string name="aide_titre_1">Pour commencer:</string>
    <string name="aide_para_1">Dites nous où vous cherchez des antennes, en appuyant sur le bouton position. \nUne large liste de choix s\'offre à vous, prenez l\'option qui correspond à vos besoins</string>
    <string name="aide_titre_2">Trouver une antenne</string>
    <string name="aide_para_2">Le bouton chercher une antenne vous permettra de localiser l\'antenne la plus proche de la position indiquée.</string>
    <string name="aide_titre_3">Se rapprocher de l\'antenne</string>
    <string name="aide_para_3">Après avoir trouvé une antenne, un bouton apparait sur la carte pour créer un itinéraire vers cette carte.\nCette fonction utilise le service: OpenRouteService, et les instructions ne sont actuellement disponibles qu\'en anglais. Nous travaillons à les traduire le plus efficacement possible.</string>
    <string name="aide_titre_4">Quoi d\'autre?</string>
    <string name="aide_para_4">Explorez sur la carte les antennes, et apprenez en plus sur la couverture wifi de votre opérateur en sélectionnant une antenne. \nLe bouton bleu Antennes à Proximités vous permettra de localiser un grand nombre d\'antennes.\nAffinez votre recherche en élargissant ou en restreignant le rayon de recherche dans les paramètres.</string>
    <string name="aide_titre_5">Astuces</string>
    <string name="aide_para_5">Pour utiliser l\'application sans avoir d\'accès à internet, nous vous recommandons d\'utiliser la recherche par commune. \nPour avoir accès à la carte même sans connexion, explorez-la, et la partie visitée sera automatiquement enregistrée dans le cache de l\'application, et ainsi rendue accessible même sans accès internet</string>
    <string name="aide_titre_6">Encore besoin d\'aide?</string>
    <string name="aide_para_6">Contactez-nous! Le service d\'assistance est à votre écoute, pour répondre à vos questions et vous aider à profiter au mieux de RESEAU ?</string>
</resources>