<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/param"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:orientation="vertical"
            android:padding="5sp">

            <CheckBox
                android:id="@+id/loc_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/loc_auto" />

            <CheckBox
                android:id="@+id/enregistrement_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/enregistrement_auto" />

            <CheckBox
                android:id="@+id/pub_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pub" />


            <LinearLayout
                android:id="@+id/z1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="2sp">

                <TextView
                    android:id="@+id/niv_zoom1_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/zoom_pos" />

                <EditText
                    android:id="@+id/zoom1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="15"
                    android:hint="@string/_1_20"
                    android:inputType="number"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:text="@string/_15"
                    tools:ignore="DuplicateSpeakableTextCheck" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/z2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="2sp">

                <TextView
                    android:id="@+id/niv_zoom2_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/zoom_ant" />

                <EditText
                    android:id="@+id/zoom2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="15"
                    android:hint="@string/_1_20"
                    android:inputType="number"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:text="@string/_15" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="3"
                    android:text="@string/types_antenne"/>

                <CheckBox
                    android:id="@+id/deuxG"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/_2g" />

                <CheckBox
                    android:id="@+id/troisG"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/_3g" />

                <CheckBox
                    android:id="@+id/quatreG"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/_4g" />

                <CheckBox
                    android:id="@+id/cinqG"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/_5g" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/r_r"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minHeight="48dp"
                    android:text="@string/nb_ant" />

                <SeekBar
                    android:id="@+id/nombre_antennes_niveau"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="4"
                    android:progress="2" />
            </LinearLayout>

            <Button
                android:id="@+id/reinitialiser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reinitialise"
                app:backgroundTint="@color/gris_fonce" />

            <Button
                android:id="@+id/validerParam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/valider" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>